<resources>
    <string name="app_name">Blood Donors</string>

    <string-array name="blood_arrays">
        <item>A+</item>
        <item>B+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="city_arrays">
        <item>Karachi</item>
        <item>Islamabad</item>
        <item>Lahore</item>
        <item>Faisalabad</item>
        <item>Rawalpindi</item>
        <item>Sargodha</item>
        <item>Multan</item>
        <item>Gujranwala</item>
        <item>Hyderabad</item>
        <item>Peshawar</item>
        <item>Quetta</item>
        <item>Sialkot</item>
        <item>Bahawalpur</item>
        <item>Sukkur</item>
        <item>Kandhkot</item>
        <item>Shekhupura</item>
        <item>Mardan</item>
        <item>Gujrat</item>
        <item>Larkana</item>
        <item>Kasur</item>
        <item>Rahim Yar Khan</item>
        <item>Sahiwal</item>
        <item>Okara</item>
        <item>Dera Ghazi Khan</item>
        <item>Mingora</item>
        <item>Mirpur Khas</item>
        <item>Chiniot</item>
        <item>Nawabshah</item>
        <item>Kamoke</item>
        <item>Burewala</item>
        <item>Jhelum</item>
        <item>Sadiqabad</item>
        <item>Khanewal</item>
        <item>Hafizabad</item>
        <item>Kohat</item>
        <item>Jacobabad</item>
        <item>Shikarpur</item>
        <item>Muzaffargarh</item>
        <item>Khanpur</item>
        <item>Gojra</item>
        <item>Bahawalnagar</item>
        <item>Abbottabad</item>
        <item>Muridke</item>
        <item>Pakpattan</item>
        <item>Khuzdar</item>
        <item>Jaranwala</item>
        <item>Chishtian</item>
        <item>Daska</item>
        <item>Mandi Bahauddin</item>
        <item>Ahmadpur East</item>
        <item>Kamalia</item>
        <item>Tando Adam</item>
        <item>Khairpur</item>
        <item>Dera Ismail Khan</item>
        <item>Vehari</item>
        <item>Nowshera</item>
        <item>Dadu</item>
        <item>Wazirabad</item>
        <item>Khushab</item>
        <item>Charsada</item>
        <item>Swabi</item>
        <item>Chakwal</item>
        <item>Mianwali</item>
        <item>Tando Allahyar</item>
        <item>Kot Adu</item>
        <item>Farooka</item>
        <item>Chichawatni</item>

    </string-array>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="email_id">Email ID</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="blood_group">Blood Group</string>
    <string name="city_prompt">City</string>
    <string name="donor">Yes</string>
    <string name="txtName" />
    <string name="btnCancel">CANCEL</string>
    <string name="btnCall">CALL</string>
    <string name="txtcity" />
    <string name="txtphone" />
    <string name="txtBld" />
    <string name="txtdonors">Donors</string>
    <string name="blood_group_txt">Blood Group</string>
    <string name="txtCity">City</string>
    <string name="btn_Search_txt">Search</string>
    <string name="txt_searchDonor">Search Donor</string>
    <string name="imgviewsearch">imgViewSearch</string>
    <string name="registerBtnTxt">Register</string>
    <string name="txt_i_am_donor">I am donor</string>
    <string name="blood_grouptxt">Blood Group</string>
    <string name="txtcIty">City</string>
    <string name="contact_no">Contact no.</string>
    <string name="passwordHint">Password</string>
    <string name="registrationTxt">Registration</string>
    <string name="editNameHint">Name</string>
    <string name="genderTxt">Gender</string>
    <string name="loginEditEmail_HintTxt">Email</string>
    <string name="login_passwordHint">Password</string>
    <string name="log_inBtnTxt">Log in</string>
    <string name="registerbtntxt">Register</string>
    <string name="foundError">Donors not found!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password2">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Address to sent you password reset instructions.</string>
    <string name="enter_old_password_hint">Enter Old Password</string>
    <string name="enter_new_password_hint">Enter New Password</string>
    <string name="cityTxtProf">City :</string>
    <string name="emailProftxt">Email :</string>
    <string name="genderTxtprof">Gender :</string>
    <string name="blood_groupTxtProf">Blood Group :</string>
    <string name="nameProfTxt">Name :</string>

</resources>
