<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/txtRegPadding"
                android:text="@string/registrationTxt"
                android:textColor="@color/white"
                android:textSize="@dimen/registrationTxtSize"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editNameMarginTop"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/editNameHint"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/editNametxtSize" />

            <TextView
                android:id="@+id/txtGen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/txtGenMarginTop"
                android:text="@string/genderTxt"
                android:textColor="@color/white"
                android:textSize="@dimen/txtGenderSize" />


            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:weightSum="100">-->

                <RadioGroup
                    android:id="@+id/radioGen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <RadioButton

                        android:layout_weight="50"
                        android:id="@+id/radioButtonm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/radioBtnMarginLeft"
                        android:layout_marginTop="@dimen/radioBtnMarginTop"
                        android:text="@string/radio_male"
                        android:textSize="@dimen/radioBtnTxtSize" />

                    <RadioButton
                        android:layout_weight="50"
                        android:id="@+id/radioButtonf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/radioBtnMarginLeft"
                        android:layout_marginTop="@dimen/radioBtnMarginTop"
                        android:text="@string/radio_female"
                        android:textSize="@dimen/radioBtnTxtSize" />


                </RadioGroup>


            <!--</LinearLayout>-->

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edtEmailMarginTop"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/edtEmailtxtSize" />

            <EditText
                android:id="@+id/editPassreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/passMarginTop"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/passTxtSize" />


            <EditText
                android:id="@+id/editCont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contact_backgroundTint"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:maxLength="11"
                android:hint="@string/contact_no"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/conEditTextColor"
                android:textColorHint="@color/white"
                android:textSize="@dimen/contEditSize" />

            <TextView
                android:id="@+id/txtCity_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/txtCitymarginTop"
                android:text="@string/txtcIty"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_citySize" />


            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/spinnerCity_marginTop"
                android:entries="@array/city_arrays"
                android:prompt="@string/blood_group" />


            <TextView
                android:id="@+id/txtBldgrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/txtBldGrpMargin_top"
                android:text="@string/blood_grouptxt"
                android:textColor="@color/white"
                android:textSize="@dimen/txtBldGrpSize" />


            <Spinner
                android:id="@+id/spinnerBlg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/spinner_Blg_marginTop"
                android:entries="@array/blood_arrays"
                android:prompt="@string/blood_group" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <CheckBox
                    android:id="@+id/donor_check"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true"
                    android:textSize="@dimen/checkBoxTxtSize"
                    android:layout_marginStart="@dimen/checkBoxMarginStart"
                    android:layout_marginTop="@dimen/checkBoxMarginTop"/>

                <TextView
                    android:id="@+id/txtDonor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/txtDonorMargintop"
                    android:layout_marginStart="@dimen/txtDonorMarginStart"
                    android:text="@string/txt_i_am_donor"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txtDonorSize" />
            </LinearLayout>

            <Button
                android:id="@+id/btnReg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/registerBtnMarginLeft"
                android:layout_marginEnd="@dimen/registerBtnMarginRight"
                android:layout_marginTop="@dimen/registerBtnMargintop"
                android:background="@drawable/btncustom"
                android:text="@string/registerBtnTxt"
                android:textColor="@color/white"
                android:textSize="@dimen/registerBtnTxtSize"
                android:textStyle="bold" />



        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarreg"
            android:layout_width="@dimen/progressBarRegWidth"
            android:layout_height="@dimen/progressBarRegHeight"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />


    </RelativeLayout>
</ScrollView>