<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_donor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/paddingLeftSearch"
    android:paddingEnd="@dimen/paddingRightSearch"
    android:paddingTop="@dimen/paddingTopSearch"
    tools:context="com.example.imran.blooddonors.AdminSearchDonor"
    android:background="@drawable/gradient">


    <ImageView
        android:contentDescription="@string/imgviewsearch"
        android:id="@+id/imageViewAdmin"
        android:layout_width="@dimen/imgview_width"
        android:layout_height="@dimen/imgview_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/imgMarginTop"
        android:src="@android:drawable/ic_menu_search" />

    <TextView
        android:text="@string/txt_searchDonor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11Admin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageViewAdmin"
        android:layout_marginTop="@dimen/txImgDonor_Margintop"
        android:textSize="@dimen/txtSizeDonorSearch" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_search_bldAdmin"
        android:entries="@array/blood_arrays"
        android:layout_alignTop="@+id/textView12Admin"
        android:layout_toEndOf="@+id/textView12Admin"
        android:layout_marginStart="@dimen/spinner_BldmarginStart" />


    <Spinner
        android:id="@+id/spinner_search_cityAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textVCityAdmin"
        android:layout_toEndOf="@id/textVCityAdmin"
        android:layout_marginStart="@dimen/spinner_CitymarginStart"
        android:entries="@array/city_arrays" />




    <TextView
        android:text="@string/blood_group_txt"
        android:textSize="@dimen/bloodGrpTxtSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bloodgrp_marginTop"
        android:id="@+id/textView12Admin"
        android:layout_marginStart="@dimen/bloodgrp_marginLeft"
        android:layout_below="@+id/textView11Admin"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textVCityAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12Admin"
        android:layout_below="@+id/textView12Admin"
        android:layout_marginTop="@dimen/txTcityMargin_Top"
        android:text="@string/txtCity"
        android:textSize="@dimen/txtCitySize" />


    <Button
        android:id="@+id/btnsearchAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/btnSearch_marginbottom"
        android:layout_marginStart="@dimen/btnSearch_marginStart"
        android:background="@drawable/btncustom"
        android:text="@string/btn_Search_txt"
        android:textColor="@color/btn_white" />

</RelativeLayout>