<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imran.blooddonors.Login"
    android:background="@drawable/gradient">



    <EditText
        android:id="@+id/editEmailog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logEdtEmail_marginTop"
        android:ems="10"
        android:hint="@string/loginEditEmail_HintTxt"
        android:textSize="@dimen/loginEditEmail_HintTxtsize"
        android:textColorHint="@color/app_name"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/app_name"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/edtPassMarginTop"
        android:ems="10"
        android:hint="@string/login_passwordHint"
        android:textSize="@dimen/login_password_txtSize"
        android:textColorHint="@color/app_name"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/app_name"
        />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btnLoginMarginTop"
        android:layout_marginLeft="@dimen/btnLoginMarginLeft"
        android:background="@drawable/btncustom"
        android:text="@string/log_inBtnTxt"
        android:textColor="@color/app_name"
        android:textSize="@dimen/loginBtnTextsize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textSize="@dimen/forgotPassTextSize"
        android:layout_marginTop="@dimen/forgotPassMarginTop"
        android:layout_marginLeft="@dimen/forgotpassMarginLeft"
        android:text="@string/btn_forgot_password"
        android:layout_below="@+id/btnLog"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/registerBtnMarginTopa"
        android:layout_marginLeft="@dimen/registerBtnMarginLefta"
        android:background="@drawable/btncustom"
        android:text="@string/registerbtntxt"
        android:textColor="@color/white"
        android:textSize="@dimen/registerBtnTxtSizea"
        android:textStyle="bold"
        android:layout_below="@+id/btnLog"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="@dimen/progressBarLogWidth"
        android:layout_height="@dimen/progressBarLogHeight"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>